--- a/wwr/site-plan-rafting.css
+++ b/wwr/site-plan-rafting.css
@@ -12,14 +12,14 @@ Fonts are separated by a & */
   --accent2-color: #EF6351;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Serif";
+  --paragraph-font: sans-serif, Helvetica, Lato;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #3a4347;  /* headlines on a white background */ 
   --headline-color-on-color: #f5f0f6; /* headlines on a colored background */ 
   --paragraph-color-on-white: #339989; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #ffffff; /* paragraph text on a colored background */ 
+  --paragraph-color-on-color: #f5f0f6; /* paragraph text on a colored background */ 
   --paragraph-background-color: #3a4347  ;
   --nav-link-color: #000000;
   --nav-background-color: #EF6351;
