--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,17 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+
 header {
     background-color: #3a4347;
 }
 
 .home-title {
     color: #3a4347;
+    font-family: serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 .logo {
     width: 80px;
+}
+
+#logo_link {
+    padding-top: 5px;
 }
 
 #hero-img {
@@ -20,12 +30,20 @@ header {
 
 body {
     background-color: white;
+    font-family: sans-serif, Helvetica, Lato;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 .book, .join {
     background-color: #3a4347;
     color: #f5f0f6;
     text-decoration: none;
+    font-size: 18px;
+    margin-top: 50px;
+    padding: 15px 30px;
+    border-radius: 5px;
 
 }
 
@@ -43,6 +61,7 @@ nav a{
     text-align: center;
     color: #f5f0f6;
     text-decoration: none;
+    padding: 35px;
 }
 
 nav a:hover {
@@ -62,13 +81,25 @@ h1{
     text-align: center;
 }
 
+h2 {
+    color: #f5f0f6;
+    margin: 0;
+}
+
 h4 {
     text-align: center;
     color: #3a4347;
 }
 
-main section{
+.card-img {
+    border: 10px solid #339989;
+}
+main section {
     text-align: center;
+}
+
+main section img {
+    box-sizing: border-box;
 }
 
 #background {
@@ -76,17 +107,28 @@ main section{
     background-color: #3a4347;
 }
 
-.msg {
-    background-color: #3a4347;
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
 }
 
-.msg h2, .msg p {
+.msg {
     color: #f5f0f6;
+    background-color: #3a4347;
+    line-height: 1.5em;
+    padding: 35px;
+}
+
+.msg p {
+    color: #f5f0f6;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 footer {
     background-color: #EF6351;
     color: black;
+    margin-top: 200px;
+    padding: 25px 50px;
 }
 
 footer p{
@@ -106,3 +148,7 @@ footer a:hover {
 footer p a:hover {
     text-decoration: underline;
 }  
+
+footer .social img {
+    padding-top: 15px;
+}
