--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -2,10 +2,12 @@
 
 header {
     background-color: #3a4347;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 .home-title {
-    color: #3a4347;
+    color: #ffffff;
     font-family: serif;
     font-size: 2em;
     margin-top: 10px;
@@ -22,10 +24,35 @@ header {
 
 #logo_link {
     padding-top: 5px;
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
 }
 
 #hero-img {
     width: 100%;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#hero-msg h4 {
+    color: white;
 }
 
 body {
@@ -57,6 +84,11 @@ body {
     margin: 0 auto;
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
 nav a{
     text-align: center;
     color: #f5f0f6;
@@ -82,7 +114,7 @@ h1{
 }
 
 h2 {
-    color: #f5f0f6;
+    color: #3a4347;
     margin: 0;
 }
 
@@ -92,8 +124,22 @@ h4 {
 }
 
 .card-img {
-    border: 10px solid #339989;
+    width: 100%;
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
 main section {
     text-align: center;
 }
@@ -104,11 +150,34 @@ main section img {
 
 #background {
     height: 725px;
-    background-color: #3a4347;
+    background-color: #697377;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
-.rivers-card, .camping-card, .rapids-card {
+.rivers-card {
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #000000;
 }
 
 .msg {
@@ -116,6 +185,13 @@ main section img {
     background-color: #3a4347;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #000000;
+}
+
+.msg h2{
+    color: #f5f0f6;
 }
 
 .msg p {
@@ -129,6 +205,9 @@ footer {
     color: black;
     margin-top: 200px;
     padding: 25px 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer p{
@@ -151,4 +230,46 @@ footer p a:hover {
 
 footer .social img {
     padding-top: 15px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
