--- a/heliosesports/styles/site-plan.css
+++ b/heliosesports/styles/site-plan.css
@@ -5,14 +5,14 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #fce700   ;
+  --secondary-color: #000000 ;
+  --accent1-color: #cab701;
+  --accent2-color: #f2963f;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: serif;
+  --paragraph-font: sans-serif, Lato, Helvetica;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
@@ -88,6 +88,7 @@ p {
 }
 .secondary {
   background-color: var(--secondary-color);
+  color: #FFFFFF;
 }
 .accent1 {
   background-color: var(--accent1-color);
