--- a/heliosesports/styles/site-plan.css
+++ b/heliosesports/styles/site-plan.css
@@ -16,11 +16,11 @@ Fonts are separated by a | */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #000000;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --headline-color-on-color: #000000; /* headlines on a colored background */ 
   --paragraph-color-on-white: #000000; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
   --paragraph-background-color: #FCE700  ;
-  --nav-link-color: #F2963F;
+  --nav-link-color: #000000;
   --nav-background-color: #CAB701;
   --nav-hover-link-color: #F2963F;
   --nav-hover-background-color: #CAB701;
