--- a/heliosesports/styles/styles.css
+++ b/heliosesports/styles/styles.css
@@ -37,11 +37,41 @@ body {
     grid-row: 1/2;
     margin-top: 100px;
     color: white;
+    text-align: center;
 }
 
-#hero-msg h4 {
+.home-title {
+    color: #ffffff;
+    font-family: serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+h4 {
+    text-align: center;
     color: white;
 }
+
+.button-box {
+    text-align: center;
+}
+
+.book {
+    background-color: #3a4347;
+    color: #f5f0f6;
+    text-decoration: none;
+    font-size: 18px;
+    margin-top: 50px;
+    padding: 15px 30px;
+    border-radius: 5px;
+
+}
+
+.book:hover {
+    background-color: #f2963f;
+    color: #f5f0f6;
+}
+
 
 nav {
     display: flex;
@@ -220,6 +250,69 @@ button {
   margin-left: 0.5em;
 }
 
+.meetus {
+    text-align: center;
+}
+
+.team {
+    text-align: center;
+}
+
+.theteam {
+    margin: 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.blk {
+    margin: auto;
+}
+
+.neon {
+    margin: auto;
+}
+
+.hawk {
+    margin: auto;
+}
+
+.soap {
+    margin: auto;
+}
+
+.fox {
+    margin: auto;
+}
+
+.player-img {
+    height: 200px;
+    width: 200px;
+    border: 5px solid #fce700;
+}
+
+.position, .player {
+    margin-top: -10px;
+}
+
+.intro {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.main-img {
+    height: 400px;
+    margin-left: 100px;
+    grid-column: 2/2;
+    margin-top: 22px;
+    border: 3px solid #f2963f;
+}
+
+.main-intro {
+    margin: auto;
+    text-align: center;
+    grid-column: 3/5;
+}
+
 footer {
     background-color: #cab701;
     color: black;
@@ -259,4 +352,46 @@ footer p a:hover {
 footer .social img {
     margin: 20px;
     height: 48px;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
