--- a/heliosesports/styles/styles.css
+++ b/heliosesports/styles/styles.css
@@ -1,6 +1,6 @@
 body {
     color: white;
-    background-color: black;
+    background-color: #000000;
     font-size: 22px;
 }
 
@@ -48,7 +48,6 @@ body {
     background-color: #000000;
     opacity: 0.6;
     margin: 10px;
-    border: 10px solid black;
 }
 
 
@@ -274,7 +273,8 @@ button {
 .theteam {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
-    gap: 10px;
+    justify-content: center;
+    gap: 20px;
 }
 
 .player-img {
@@ -286,31 +286,18 @@ button {
     margin-bottom: auto;
 }
 
-.blk img{
-    max-width: 50%;
-    display: block;
+.card {
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2);
+    transition: 0.3s;
+    max-width: 550px;
     margin: auto;
 }
 
-.neon img{
-    max-width: 50%;
-    display: block;
-    margin: auto;
-}
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(255, 255, 255, 0.2);
+  }
 
-.hawk img{
-    max-width: 50%;
-    display: block;
-    margin: auto;
-}
-
-.soap img{
-    max-width: 50%;
-    display: block;
-    margin: auto;
-}
-
-.fox img{
+.card img{
     max-width: 50%;
     display: block;
     margin: auto;
@@ -321,6 +308,7 @@ button {
     max-width: 50%;
     display: block;
     margin: auto;
+    padding: 2px 12px;
 }
 
 .social-links {
@@ -328,7 +316,7 @@ button {
     margin: auto;
 }
 
-.fox-twitch img, .fox-youtube img{
+.twitch img, .youtube img, .twitter img{
     height: 30px;
     margin: auto;
     float: left;  
@@ -394,7 +382,7 @@ footer .social img {
     height: 48px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 950px) {
     #hero, .home-grid {
         display: block;
         height: auto;
@@ -425,9 +413,19 @@ footer .social img {
         height: auto;
     }
 
-    .blk, .soap, .hawk, .neon, .fox { 
+    .card { 
         margin: 50px auto;
         width: 80%;
+    }
+
+    .timeline {
+        width:300px;
+        height: 20px;
+        list-style: none;
+        text-align: justify;
+        margin: 80px auto;
+        background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(45%, rgba(255,255,255,0)), color-stop(51%, rgba(191,128,11,1)), color-stop(57%, rgba(255,255,255,0)), color-stop(100%, rgba(255,255,255,0)));
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 45%, rgba(191,128,11,1) 51%, rgba(255,255,255,0) 57%, rgba(255,255,255,0) 100%);
     }
 
     #background {
