--- a/heliosesports/styles/styles.css
+++ b/heliosesports/styles/styles.css
@@ -274,7 +274,7 @@ button {
     display: grid;
     grid-template-columns: repeat(3, 1fr); 
     justify-content: center;
-    gap: 20px;
+    gap: 50px;
 }
 
 .player-img {
@@ -289,7 +289,7 @@ button {
 .card {
     box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2);
     transition: 0.3s;
-    max-width: 550px;
+    max-width: 350px;
     margin: auto;
 }
 
@@ -317,9 +317,9 @@ button {
 }
 
 .twitch img, .youtube img, .twitter img{
+    display: inline-block;
     height: 30px;
-    margin: auto;
-    float: left;  
+    margin: auto; 
 }
 
 .intro {
